--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -14,7 +14,7 @@ jobs:
         python-version: 3.11
     - name: Install upload dependencies
       run: |
-        pip install build
+        pip install build twine
     - name: Build and publish
       env:
         TWINE_USERNAME: __token__
